# haco

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: performance.md
integrations/openclaw-connector/: index.mjs  openclaw.plugin.json  package.json
scripts/: install-linux.sh  load-test.sh  test-install-linux.sh  test-openclaw-connector.mjs
src/: lib.rs
tests/: agent-run-ui.test.mjs  markdown-renderer.test.mjs
web/: app.js  haco-glass-mockup.css  haco-glass-mockup.html  haco-glass-mockup.js  index.html  markdown.js  style.css  sw.js
